pkg/gateway/xds/translator/testdata/out/xds-ir/http-route-multiple-mirrors.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: mirror-route
      route:
        cluster: route-dest
        requestMirrorPolicies:
        - cluster: mirror-route-dest
        - cluster: mirror-route-dest1
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/mirror-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
